added scraper class and other service classes